<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActividadPantallaPrincipal">


    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"/>

    <Button
        android:id="@+id/buttonUbicacionActual"
        style="@style/BotonPrincipal"
        android:layout_width="279dp"
        android:layout_height="53dp"
        android:layout_marginTop="40dp"
        android:text="@string/botonUbicacionActual"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/buttonConsultarUbicacion"
        style="@style/BotonPrincipal"
        android:layout_width="279dp"
        android:layout_height="53dp"
        android:layout_marginTop="90dp"
        android:text="@string/botonConsultarUbicacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonUbicacionActual" />

    <Button
        android:id="@+id/buttonConfiguracion"
        style="@style/BotonPrincipal"
        android:layout_width="279dp"
        android:layout_height="53dp"
        android:layout_marginTop="90dp"
        android:text="@string/botonConfiguracion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonConsultarUbicacion" />

    <Button
        android:id="@+id/buttonSalirAplicacion"
        style="@style/BotonPrincipal"
        android:layout_width="279dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:text="@string/botonSalirAplicacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonConfiguracion" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="190dp"
        android:layout_height="146dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logottravel" />

</androidx.constraintlayout.widget.ConstraintLayout>